--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -374,121 +374,72 @@ jobs:
           --query 'StandardOutputContent' \
           --output text > kubeconfig
         
-        # Check if we got the kubeconfig
+        # Check if kubeconfig was retrieved successfully
         if [ ! -f kubeconfig ] || [ ! -s kubeconfig ]; then
-          echo "SSM send-command failed. Trying alternative method..."
-          
-          # Alternative: Try interactive session
-          aws ssm start-session --target "$MASTER_INSTANCE_ID" --document-name AWS-StartInteractiveCommand --parameters 'command="sudo cat /etc/rancher/k3s/k3s.yaml"' > kubeconfig_raw || {
-            echo "Both SSM methods failed. Checking command status..."
-            aws ssm get-command-invocation --command-id "$COMMAND_ID" --instance-id "$MASTER_INSTANCE_ID"
-            exit 1
-          }
-          
-          # Extract kubeconfig from session output
-          if [ -f kubeconfig_raw ]; then
-            grep -A 1000 "apiVersion:" kubeconfig_raw > kubeconfig || {
-              echo "Failed to extract kubeconfig from SSM session output"
-              exit 1
-            }
-          fi
-        fi
-        
-        # Update kubeconfig to use Load Balancer DNS and disable TLS verification
-        echo "Updating kubeconfig to use Load Balancer DNS: $KUBERNETES_API_LB"
-        sed -i "s|server: https://127.0.0.1:6443|server: https://$KUBERNETES_API_LB:6443|g" kubeconfig
-        
-        # Create a new kubeconfig with proper TLS settings
-        echo "Creating kubeconfig with TLS verification disabled..."
-        echo "apiVersion: v1" > kubeconfig_new
-        echo "kind: Config" >> kubeconfig_new
-        echo "clusters:" >> kubeconfig_new
-        echo "- name: k3s-cluster" >> kubeconfig_new
-        echo "  cluster:" >> kubeconfig_new
-        echo "    server: https://$KUBERNETES_API_LB:6443" >> kubeconfig_new
-        echo "    insecure-skip-tls-verify: true" >> kubeconfig_new
-        echo "contexts:" >> kubeconfig_new
-        echo "- name: k3s-context" >> kubeconfig_new
-        echo "  context:" >> kubeconfig_new
-        echo "    cluster: k3s-cluster" >> kubeconfig_new
-        echo "    user: k3s-user" >> kubeconfig_new
-        echo "current-context: k3s-context" >> kubeconfig_new
-        echo "users:" >> kubeconfig_new
-        echo "- name: k3s-user" >> kubeconfig_new
-        echo "  user:" >> kubeconfig_new
-        echo "    token: \"\"" >> kubeconfig_new
-        
-        # Copy the token from the original kubeconfig
-        echo "Extracting token from original kubeconfig..."
-        TOKEN=$(grep -A 1 "token:" kubeconfig | tail -n 1 | tr -d ' ')
-        
-        if [ -z "$TOKEN" ]; then
-          echo "ERROR: Could not extract token from kubeconfig"
-          echo "Original kubeconfig content:"
-          cat kubeconfig
-          echo "Trying to get token directly from master node..."
-          
-          # Get token directly from master node
-          TOKEN=$(aws ssm send-command \
-            --instance-ids "$MASTER_INSTANCE_ID" \
-            --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["sudo cat /var/lib/rancher/k3s/server/node-token"]' \
-            --query 'Command.CommandId' \
-            --output text)
-          
-          sleep 10
-          
-          TOKEN=$(aws ssm get-command-invocation \
-            --command-id "$TOKEN" \
-            --instance-id "$MASTER_INSTANCE_ID" \
-            --query 'StandardOutputContent' \
-            --output text | tr -d '\n\r')
-          
-          if [ -z "$TOKEN" ]; then
-            echo "ERROR: Could not get token from master node"
-            exit 1
-          fi
-          
-          echo "Token retrieved from master node: ${TOKEN:0:10}..."
-        fi
-        
-        # Update the token in the new kubeconfig
-        sed -i "s/token: \"\"/token: \"$TOKEN\"/" kubeconfig_new
-        
-        # Verify the new kubeconfig
-        echo "Verifying new kubeconfig..."
-        if [ ! -f kubeconfig_new ] || [ ! -s kubeconfig_new ]; then
-          echo "ERROR: New kubeconfig is empty or missing"
+          echo "ERROR: Could not retrieve kubeconfig from master node"
+          echo "Master node may still be initializing. Please check the instance status."
           exit 1
         fi
         
-        echo "New kubeconfig content:"
-        cat kubeconfig_new
+        echo "Original kubeconfig content:"
+        cat kubeconfig
+        echo "--- End of original kubeconfig ---"
         
-        # Use the new kubeconfig
-        cp kubeconfig_new kubeconfig
+        # Update kubeconfig to use Load Balancer DNS and disable TLS verification
+        echo "Updating kubeconfig to use Load Balancer DNS: $KUBERNETES_API_LB"
         
-        # Fallback: If the new kubeconfig doesn't work, try modifying the original
-        echo "Testing kubeconfig connectivity..."
-        if ! kubectl get nodes --request-timeout=30s 2>/dev/null; then
-          echo "New kubeconfig failed. Trying fallback approach..."
-          
-          # Use original kubeconfig but update server and add insecure flag
-          cp kubeconfig kubeconfig_backup
-          sed -i "s|server: https://127.0.0.1:6443|server: https://$KUBERNETES_API_LB:6443|g" kubeconfig
-          
-          # Add insecure-skip-tls-verify to the cluster section
-          sed -i '/cluster:/a\    insecure-skip-tls-verify: true' kubeconfig
-          
-          echo "Fallback kubeconfig content:"
-          cat kubeconfig
-        fi
+        # First, let's try a simpler approach - just modify the original kubeconfig
+        echo "Modifying original kubeconfig..."
+        cp kubeconfig kubeconfig_original
+        
+        # Update server URL
+        sed -i "s|server: https://127.0.0.1:6443|server: https://$KUBERNETES_API_LB:6443|g" kubeconfig
+        
+        # Add insecure-skip-tls-verify to the cluster section
+        sed -i '/cluster:/a\    insecure-skip-tls-verify: true' kubeconfig
+        
+        echo "Modified kubeconfig content:"
+        cat kubeconfig
+        echo "--- End of modified kubeconfig ---"
         
         export KUBECONFIG=./kubeconfig
         
+        # Test the modified kubeconfig
+        echo "Testing modified kubeconfig..."
+        kubectl get nodes --request-timeout=30s || {
+          echo "Modified kubeconfig failed. Trying alternative approach..."
+          
+          # Try using the original kubeconfig with just server update
+          cp kubeconfig_original kubeconfig
+          sed -i "s|server: https://127.0.0.1:6443|server: https://$KUBERNETES_API_LB:6443|g" kubeconfig
+          
+          # Add insecure flag in a different way
+          sed -i 's/insecure-skip-tls-verify: false/insecure-skip-tls-verify: true/g' kubeconfig
+          
+          echo "Alternative kubeconfig content:"
+          cat kubeconfig
+        }
+        
         # Wait for cluster to be ready
         echo "Waiting for cluster to be ready..."
-        timeout 300 bash -c 'until kubectl get nodes; do sleep 10; done'
+        timeout 300 bash -c '
+          for i in {1..30}; do
+            echo "Attempt $i: Testing cluster connectivity..."
+            if kubectl get nodes --request-timeout=10s 2>/dev/null; then
+              echo "Cluster is accessible!"
+              break
+            fi
+            echo "Cluster not ready yet, waiting 10 seconds..."
+            sleep 10
+          done
+        ' || {
+          echo "ERROR: Cluster did not become ready within 5 minutes"
+          echo "Current kubeconfig:"
+          cat kubeconfig
+          echo "Testing kubectl version:"
+          kubectl version --client
+          exit 1
+        }
         
         echo "Cluster is ready!"
         kubectl get nodes
