--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -385,21 +385,65 @@ jobs:
         cat kubeconfig
         echo "--- End of original kubeconfig ---"
         
-        # Update kubeconfig to use Load Balancer DNS and disable TLS verification
-        echo "Updating kubeconfig to use Load Balancer DNS: $KUBERNETES_API_LB"
-        
         # Extract the token from the original kubeconfig
         echo "Extracting token from original kubeconfig..."
+        echo "Original kubeconfig content:"
+        cat kubeconfig
+        echo "--- End of original kubeconfig ---"
+        
+        # Try multiple methods to extract the token
+        TOKEN=""
+        
+        # Method 1: Look for token in user section
         TOKEN=$(grep -A 1 "token:" kubeconfig | tail -n 1 | tr -d ' ')
         
+        # Method 2: If Method 1 failed, try different pattern
         if [ -z "$TOKEN" ]; then
-          echo "ERROR: Could not extract token from kubeconfig"
-          echo "Original kubeconfig content:"
+          echo "Method 1 failed, trying Method 2..."
+          TOKEN=$(awk '/token:/{getline; print $0}' kubeconfig | tr -d ' ')
+        fi
+        
+        # Method 3: If Method 2 failed, try grep with context
+        if [ -z "$TOKEN" ]; then
+          echo "Method 2 failed, trying Method 3..."
+          TOKEN=$(grep -A 5 "users:" kubeconfig | grep "token:" | head -1 | awk '{print $2}' | tr -d '"')
+        fi
+        
+        # Method 4: If all methods failed, get token directly from master node
+        if [ -z "$TOKEN" ]; then
+          echo "All local methods failed, getting token from master node..."
+          COMMAND_ID=$(aws ssm send-command \
+            --instance-ids "$MASTER_INSTANCE_ID" \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=["sudo cat /var/lib/rancher/k3s/server/node-token"]' \
+            --query 'Command.CommandId' \
+            --output text)
+          
+          sleep 10
+          
+          TOKEN=$(aws ssm get-command-invocation \
+            --command-id "$COMMAND_ID" \
+            --instance-id "$MASTER_INSTANCE_ID" \
+            --query 'StandardOutputContent' \
+            --output text | tr -d '\n\r')
+        fi
+        
+        if [ -z "$TOKEN" ]; then
+          echo "ERROR: Could not extract token from kubeconfig or master node"
+          echo "kubeconfig content:"
           cat kubeconfig
+          echo "Trying to get token directly from master node file..."
+          aws ssm send-command \
+            --instance-ids "$MASTER_INSTANCE_ID" \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=["sudo cat /var/lib/rancher/k3s/server/node-token"]'
           exit 1
         fi
         
         echo "Token extracted: ${TOKEN:0:10}..."
+        
+        # Update kubeconfig to use Load Balancer DNS and disable TLS verification
+        echo "Updating kubeconfig to use Load Balancer DNS: $KUBERNETES_API_LB"
         
         # Create a completely new kubeconfig with TLS verification disabled
         echo "Creating new kubeconfig with TLS verification disabled..."
