--- a/.github/workflows/app-deployment.yml
+++ b/.github/workflows/app-deployment.yml
@@ -128,6 +128,7 @@ jobs:
       with:
         context: .
         file: Dockerfile
+        platforms: linux/amd64
         push: true
         tags: |
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
